--- a/src/app/pages/tasks/task-details-dialog/task-details-dialog.component.html
+++ b/src/app/pages/tasks/task-details-dialog/task-details-dialog.component.html
@@ -4,7 +4,7 @@
       <div class="text-lg tracking-wide">Szczegóły zadania</div>
       <button class="h-0 w-0"></button>
       <button mat-icon-button mat-dialog-close>
-        <mat-icon class="text-sm font-bold">close</mat-icon>
+        <mat-icon class="text-sm font-bold text-gray-900">close</mat-icon>
       </button>
     </div>
   </div>
