--- a/src/app/pages/tasks/task-list/task-list.component.html
+++ b/src/app/pages/tasks/task-list/task-list.component.html
@@ -13,7 +13,7 @@
 
       <div class="flex justify-between text-center">
         <div style="width: 31%;">
-          <h2 class="whitespace-nowrap">Do zrobienia</h2>
+          <p class="text-sm sm:text-xl font-medium tracking-wider">Do zrobienia</p>
 
           <mat-card
             cdkDropList
@@ -33,7 +33,7 @@
         </div>
 
         <div style="width: 31%;">
-          <h2>W trakcie</h2>
+          <p class="text-sm sm:text-xl font-medium tracking-wider">W trakcie</p>
 
           <mat-card
             cdkDropList
@@ -53,7 +53,7 @@
         </div>
 
         <div style="width: 31%;">
-          <h2>Ukończone</h2>
+          <p class="text-sm sm:text-xl font-medium tracking-wider">Ukończone</p>
 
           <mat-card
             cdkDropList
